simulation added to app

--- a/test/app.Rmd
+++ b/test/app.Rmd
@@ -33,7 +33,10 @@ numericInput(inputId=("Decksize"),
                             label = c("Reject this for another random card"), 
                             value = 10, min=1,max=101, step=1)
                 
-    
+      numericInput(inputId=("sims"),   
+                            label = c("No of simulation"), 
+                            value = 1000, min=1000,max=1000000, step=1000)
+                
 
 ```
 
@@ -93,7 +96,7 @@ An explanation for the scenario in which a card is dealt and not switching is ex
 #################------------------------------------------
 
 pycr1 <- function( pack.size=13, card1=10 ) {
-  ###########################################analytical keeping delat cardK
+  ###########################################analytical keeping dealt card
   
 
   pack <- rep(1:pack.size, times=4)             # regular pack of cards aces high
@@ -389,7 +392,132 @@ pycr1 <- function( pack.size=13, card1=10 ) {
   #print(nu)
   print(MASS::fractions(numerator/denominator))
 }
+   
+
+#-----------------------simulation
+
+
+simi <- function(card1=NULL, n=13) {
+  
+  pack=rep(1:n, times=4)
+  card1 <- abs(card1)
+  x <- which(pack==card1)[1]                    # identify card location in pack, the 1st 
+  pack2 <- pack[-x]                             # remove from pack 1 card of value that is given to us 
+  
+  hand <- c(sample(pack2, 3, replace=F) )       # select 3 random cards, deck must be missing given card (N=19)
+  
+  # --------------------------------
+  # 2--------------------------------Guess card2 
+ 
+  #remove first card after we have seen it
+    x <- which(pack2==hand[1])[1]  
+    pack3 <- pack2[-x] 
+
+     A <- sum(hand[1] < pack3) # count the cards > first card
+     B <- sum(hand[1] > pack3) # count the cards < first card
+   
+    if (A>B )  	{             # if there are more cards greater than the first card in our hand guess higher
+    H1 <- hand[2] > hand[1]   # check if our guess is correct
+    L1=NA
+  }  else {  # if we guess lower count if we correct!
+    L1 <- hand[2] < hand[1]    # check if our guess is correct
+    H1=NA
+  }
+  # --------------------------------
+  # 3--------------------------------after guessing card 2 value relative to card1 correctly we proceed
+  
+  if (isTRUE(H1)|isTRUE(L1)) { 
     
+    # now we have seen the second card remove it from pack 
+    x <- which(pack3==hand[2])[1]  
+    pack4 <- pack3[-x] 
+    
+    # as before 
+    A <- sum(hand[2] < pack4)  # count the cards > second card
+    B <- sum(hand[2] > pack4)  # count the cards < second card
+    
+    if (A>B )  	 {    # assess as before
+      H2 <- hand[3] > hand[2]  
+      L2=NA
+    }  else { 
+      L2 <- hand[3] < hand[2]  
+      H2=NA
+    } 
+    
+  } else { 
+    
+    H2=NA # need this so we always populate H2 L2
+    L2=NA
+  }
+  
+  # 4--------------------------------collect information
+  
+  ret = list()  # collect information after a loop is executed
+  ret$H1  = H1 # H1 prop of 1st cards that are < 9 and card 2 is of greater value
+  ret$L1  = L1 # L1 prop of 1st cards that are > 9 and card 2 is of lesser value
+  ret$H2  = H2 # H2 after correctly guessing 2nd card, prop of 2nd cards that are < 9 and card 3 is of greater value than card 2
+  ret$L2  = L2 # L2 after correctly guessing 2nd card, prop of 2nd cards that are > 9 and card 3 is of lesser value than card 2
+  
+  return(list(ret) )  # output the information
+ }
+
+
+# function to manage the results...this seems like it could be shortened
+calc.prob <- function(result ) {
+  x <- unlist(result)
+  xx <-  as.data.frame(cbind(result=data.frame(x), test =names(x)))
+  xx$id <- ave(xx$test ,xx$test ,  FUN = seq_along)   
+  require(tidyverse)
+  z <- xx %>% spread(test, x)
+  apply(z[,2:5],2,mean, na.rm=T)  
+  
+  zz <- z[,2:5]
+  zz <- zz*1  
+  zz$card2 <- rowSums(zz[,c("H1", "L1")], na.rm=TRUE)  # any win here is counted
+  zz$card3 <- rowSums(zz[,c("H2", "L2")], na.rm=TRUE)  # any win here is counted
+  zz$card23 <- rowSums(zz[,c("card2", "card3")], na.rm=TRUE) # both have to be guessed correctly to win the game
+  y <-  zz$card23
+  length(y[y==2])/input$sims   # proportion of times we win 
+}
+
+
+
+ 
+
+
+
+renderPrint({   
+    
+ 
+    "Simulation"
+    
+    
+})
+
+renderPrint({
+ 
+    result <- replicate(input$sims, simi(card1=input$swap, n=input$Decksize))
+  print(paste0("Swapping ",input$swap," Probability of winning ",calc.prob(result)))
+
+    
+    
+})
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
 
 renderPrint({   
     
